# supermagic

./: COPYRIGHT  ChangeLog  Makefile  Makefile.am  Makefile.include  Makefile.top  README  README.md  THANKS  autogen  configure.ac  crunch-hang  index.html  params.json  rr-job-prep  rr-run-job  smgc_ver.h  super_magic.c  supermagic.c  supermagic.h
cell/: Makefile  Makefile.am  cell_check.c  cell_check.h
cell/ppu/: Makefile.am  cell_check.h  cell_check_internal.h  cw_util.c  cw_util.h
cell_check/: cell_check.c  cell_check_unit_test.c
m4/: smgc-cell.m4
src/: Makefile.am  smgc_args.c  smgc_args.h  smgc_config.h  smgc_constants.h  smgc_err.c  smgc_err.h  smgc_mpi.c  smgc_mpi.h  supermagic.c
src/base/: Makefile.am  smgc_base_constants.h  smgc_base_err.c  smgc_base_err.h  smgc_base_test.c  smgc_base_test.h  smgc_base_util.c  smgc_base_util.h
src/cell/: cell_check_internal.h  cell_check_ppu.c  cw_util.c  cw_util.h
src/mpi/: Makefile.am  smgc_mpi.c  smgc_mpi.h
util/: rr-job-prep
